--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.9'
 
 volumes:
   mysql_data:
@@ -7,6 +7,7 @@ volumes:
 services:
   mysql:
     image: mysql:8.0.27
+    container_name: mysql
     volumes:
       - mysql_data:/var/lib/mysql
     environment:
@@ -14,21 +15,22 @@ services:
       MYSQL_DATABASE: keycloak
       MYSQL_USER: keycloak
       MYSQL_PASSWORD: er8z3tw6
+    ports:
+      - 3306:3306
+  
   keycloak:
     depends_on:
       - mysql
     image: quay.io/keycloak/keycloak:22.0.3
     environment:
-      DB: MYSQL
-      DB_URL_HOST: mysql
-      DB_SCHEMA: keycloak
-      DB_USERNAME: keycloak
-      DB_PASSWORD: er8z3tw6
+      KC_DB: MYSQL
+      KC_DB_URL: jdbc:mysql://mysql:3306/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: er8z3tw6
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: er8z3tw6
-      KC_HOSTNAME_STRICT: 'false'
-      KC_HTTP_RELATIVE_PATH: /keycloak
-      KC_PROXY: edge
+    ports:
+      - 8080:8080
     command:
-      - start
+      - start-dev
 
