--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -23,10 +23,10 @@ services:
       - mysql
     image: quay.io/keycloak/keycloak:22.0.3
     environment:
-      KC_DB: MYSQL
-      KC_DB_URL: jdbc:mysql://mysql:3306/keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: er8z3tw6
+      DB: MYSQL
+      DB_URL: jdbc:mysql://mysql:3306/keycloak
+      DB_USERNAME: keycloak
+      DB_PASSWORD: er8z3tw6
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: er8z3tw6
     ports:
