--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 node_modules/
 .env
+mysql_data/
+keycloak/api-key-module/target/
+keycloak/api-key-module/dependency-reduced-pom.xml
+keycloak/_volumes/
+_volumes/
+_sessions/
