--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -1,7 +1,13 @@
-FROM eclipse-temurin:17-jdk-jammy as builder
+FROM amazoncorretto:21 as builder
+RUN yum update -y && yum install -y wget tar gzip
+WORKDIR /opt/maven
+RUN cd /opt/maven && \
+  wget https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz && \
+  tar xzvf apache-maven-3.9.6-bin.tar.gz
+ENV PATH="${PATH}:/opt/maven/apache-maven-3.9.6/bin"
+
 COPY ./api-key-module /root/api-key-module
-RUN cd /root/api-key-module
-RUN mvn package
+RUN cd /root/api-key-module && mvn package
 
 FROM quay.io/keycloak/keycloak:23.0.5
 WORKDIR /opt/keycloak/
