--- a/dashboard-service/src/main/resources/application.properties
+++ b/dashboard-service/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 
 spring.jmx.enabled=false
-server.port=8180
+server.port=8081
 
 keycloak.realm=${REALM_NAME:example}
-keycloak.auth-server-url=http://host.docker.internal:8080/auth
+keycloak.auth-server-url=${KC_URL}/auth
 keycloak.ssl-required=external
 keycloak.resource=dashboard-client
+
+# This secret string comes from in the keycloak/import/example-realm.json file.
 keycloak.credentials.secret=K5bOajUU1viCHCNNGFlsdKDT98fCC9KG
+
 keycloak.principal-attribute=preferred_username
 keycloak.use-resource-role-mappings=true
 keycloak.cors=true
