use nginx reverse proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,12 @@ networks:
     driver: bridge
     
 services:
+  reverse-proxy:
+    image: nginx
+    volumes:
+      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
 
   keycloak:
     container_name: keycloak
@@ -45,7 +51,7 @@ services:
       - ./keycloak/api-key-module/target/deploy:/opt/keycloak/providers/
 
     ports:
-      - 80:8080
+      - 8080:8080
     command:
       - start-dev
     networks:
@@ -57,7 +63,6 @@ services:
       context: ./dashboard-service/   
     environment:
       REALM_NAME: example
-      KC_URL: ${KC_URL}
     ports:
-      - 8080:8081
+      - 8081:8081
 
