--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     image: nginx
     volumes:
       - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
+      - ./reverse-proxy/nginx-entrypoint.sh:/docker-entrypoint.d/nginx-entrypoint.sh:ro
     ports:
       - 80:80
 
