modify on server

--- a/dashboard-service/src/main/resources/application.properties
+++ b/dashboard-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jmx.enabled=false
 server.port=8081
 
 keycloak.realm=${REALM_NAME:example}
-keycloak.auth-server-url=http://host.docker.internal:8080/auth
+keycloak.auth-server-url=/auth
 keycloak.ssl-required=external
 keycloak.resource=dashboard-client
 
