--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,10 @@ services:
     image: nginx
     volumes:
       - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
-      - ./reverse-proxy/nginx-entrypoint.sh:/docker-entrypoint.d/nginx-entrypoint.sh:ro
     ports:
       - 80:80
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   keycloak:
     container_name: keycloak
