--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -7,7 +7,7 @@ http {
         server_name localhost;
         location /auth {
             proxy_pass http://host.docker.internal:8080/;
-            proxy_redirect off;
+            proxy_redirect on;
         }
         location /dashboard {
             proxy_pass http://host.docker.internal:8081/;
