--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -6,8 +6,8 @@ http {
         listen 80;
         server_name localhost;
         location /auth {
-            proxy_pass http://host.docker.internal:8080/;
-            proxy_redirect on;
+            proxy_pass http://host.docker.internal:8080/auth/;
+            proxy_redirect off;
         }
         location /dashboard {
             proxy_pass http://host.docker.internal:8081/;
