work as docker compose on windows

--- a/compose-common.yaml
+++ b/compose-common.yaml
@@ -38,14 +38,14 @@ services:
       
       KC_HOSTNAME: ${KC_HOSTNAME:-localhost}
       #to keep compatible with other services that are expecting /auth
-      KC_HTTP_RELATIVE_PATH: /auth
+      KC_HTTP_RELATIVE_PATH: /keycloak/auth
 
       # https://stackoverflow.com/a/75649421
-      KC_HTTP_ENABLED: "true"
-      KC_HOSTNAME_STRICT: "false"
-      KC_HOSTNAME_STRICT_HTTPS: "false"
-      # KC_PROXY: "edge"
-      PROXY_ADDRESS_FORWARDING: "true"
+      KC_HTTP_ENABLED: true
+      KC_HOSTNAME_STRICT: false
+      KC_HOSTNAME_STRICT_HTTPS: false
+      KC_PROXY: edge
+      PROXY_ADDRESS_FORWARDING: true
       JAVA_OPTS_APPEND: "-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=dir -Dkeycloak.migration.dir=/import -Dkeycloak.migration.strategy=IGNORE_EXISTING"
     volumes:
       - ./keycloak/import:/import
