--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -5,12 +5,12 @@ http {
     server {
         listen 80;
         server_name localhost;
-        location /auth {
-            proxy_pass http://host.docker.internal:8080/;
-	    proxy_set_header Host $host;
-	    proxy_set_header X-Real-IP $remote_addr;
-	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	    proxy_set_header X-Forwarded-Proto $scheme;
+        location /keycloak {
+            proxy_pass http://host.docker.internal:8080/keycloak;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
 
             proxy_redirect off;
         }
