--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -3,6 +3,10 @@ networks:
     driver: bridge
 
 services:
+  dashboard-service:
+    environment:
+      KC_URL: http://localhost
+
   keycloak-mysql-db:
     image: mysql:8.0.27
     container_name: keycloak-mysql
