--- a/dashboard-service/src/main/resources/application.properties
+++ b/dashboard-service/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 
 spring.jmx.enabled=false
-server.port=8081
+server.port=4001
 
-keycloak.realm=${REALM_NAME:example}
-keycloak.auth-server-url=/auth
+# keycloak.realm=${REALM_NAME:example}
+# keycloak.auth-server-url=${KEY_CLOAK_AUTH_URL}
+keycloak.realm=example
+keycloak.auth-server-url=http://${EXTERNAL_HOST}/_/auth
 keycloak.ssl-required=external
 keycloak.resource=dashboard-client
+keycloak.proxy-url=http://host.docker.internal:4000/auth
 
 # This secret string comes from in the keycloak/import/example-realm.json file.
 keycloak.credentials.secret=K5bOajUU1viCHCNNGFlsdKDT98fCC9KG
@@ -16,3 +19,8 @@ keycloak.cors=true
 
 
 spring.main.allow-bean-definition-overriding=true
+
+server.servlet.session.cookie.domain=${EXTERNAL_HOST}
+server.use-forward-headers=true
+server.tomcat.remote-ip-header=x-forwarded-for
+server.tomcat.protocol-header=x-forwarded-proto 
