--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -5,8 +5,8 @@ http {
     server {
         listen 80;
         server_name localhost;
-        location /keycloak {
-            proxy_pass http://host.docker.internal:8080/keycloak;
+        location /_ {
+            proxy_pass http://host.docker.internal:4000/_;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,7 +15,12 @@ http {
             proxy_redirect off;
         }
         location /dashboard {
-            proxy_pass http://host.docker.internal:8081/;
+            proxy_pass http://host.docker.internal:4001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
             proxy_redirect off;
         }
     }
