--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -15,7 +15,7 @@ http {
             proxy_redirect off;
         }
         location /dashboard {
-            proxy_pass http://host.docker.internal:4001;
+            proxy_pass http://host.docker.internal:4001/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
