--- a/compose-common.yaml
+++ b/compose-common.yaml
@@ -13,16 +13,39 @@ services:
       - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 80:80
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    networks:
+      - internal
+    links:
+      - keycloak
+      - dashboard
+
+  dashboard:
+    depends_on:
+      - keycloak
+    build:
+      context: ./dashboard-node/
+    networks:
+      - internal
+
+  # dashboard:
+  #   depends_on:
+  #     - keycloak
+  #   build:
+  #     context: ./dashboard/
+  #   environment:
+  #     KEY_CLOAK_AUTH_URL: http://localhost/auth/realms/kana-api
+  #   networks:
+  #     - internal
+  #   links:
+  #     - keycloak
 
   keycloak:
     container_name: keycloak
-    # env_file:
-    #   - path: .env
-    #     required: true
-    #   - path: .env.production
-    #     required: false
+    # healthcheck:
+    #   test: ['CMD-SHELL', '[ -f /tmp/HealthCheck.java ] || echo "public class HealthCheck { public static void main(String[] args) throws java.lang.Throwable { System.exit(java.net.HttpURLConnection.HTTP_OK == ((java.net.HttpURLConnection)new java.net.URL(args[0]).openConnection()).getResponseCode() ? 0 : 1); } }" > /tmp/HealthCheck.java && java /tmp/HealthCheck.java http://localhost:8081/health/live']
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 5  
 
     build:
       context: ./keycloak/   
@@ -36,9 +59,10 @@ services:
       KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN:-admin}
       KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD:-password}
       
-      KC_HOSTNAME: ${KC_HOSTNAME:-host.docker.internal}
+      KC_HOSTNAME: localhost
+      # KC_HOSTNAME: ${KC_HOSTNAME:-keycloak}
       #to keep compatible with other services that are expecting /auth
-      KC_HTTP_RELATIVE_PATH: /_/auth
+      KC_HTTP_RELATIVE_PATH: /auth
 
       # https://stackoverflow.com/a/75649421
       KC_HTTP_ENABLED: true
@@ -47,24 +71,11 @@ services:
       KC_PROXY: edge
       PROXY_ADDRESS_FORWARDING: true
       JAVA_OPTS_APPEND: "-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=dir -Dkeycloak.migration.dir=/import -Dkeycloak.migration.strategy=IGNORE_EXISTING"
+    
     volumes:
       - ./keycloak/import:/import
       - ./keycloak/api-key-module/target/deploy:/opt/keycloak/providers/
-
-    ports:
-      - 4000:8080
     command:
       - start-dev
     networks:
       - internal
-
-  # dashboard:
-  #   build:
-  #     context: ./dashboard-service/   
-  #   environment:
-  #     REALM_NAME: example
-  #     KEY_CLOAK_AUTH_URL: http://host-gateway:3000/_/auth
-  #   ports:
-  #     - 4001:4001
-  #   extra_hosts:
-  #     - "host.docker.internal:host-gateway"
