--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -5,8 +5,8 @@ http {
     server {
         listen 80;
         server_name localhost;
-        location /_ {
-            proxy_pass http://host.docker.internal:4000/_;
+        location /auth {
+            proxy_pass http://keycloak:8080/auth;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -14,8 +14,8 @@ http {
 
             proxy_redirect off;
         }
-        location /dashboard {
-            proxy_pass http://host.docker.internal:4001/;
+        location / {
+            proxy_pass http://dashboard:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
