--- a/dashboard-node/Dockerfile
+++ b/dashboard-node/Dockerfile
@@ -1,12 +1,18 @@
 FROM node:20-slim AS base
-EXPOSE 8000
+EXPOSE 80
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
+RUN apt update && apt install -y curl
 RUN corepack enable
-COPY app /app
+
 WORKDIR /app
-RUN npm install 
+COPY app/package.json .
+RUN pnpm i
+
+COPY app/ /app/
+
+RUN mkdir -p /app
 RUN npm run prepare
 RUN npm run build
 
