--- a/compose-product.yaml
+++ b/compose-product.yaml
@@ -4,7 +4,7 @@ services:
       - path: .env
         required: true
     environment:
-      KEY_CLOAK_AUTH_URL: http://host.docker.internal:3000/auth/realms/kana-api
+      KEY_CLOAK_AUTH_URL: http://ec2-52-68-52-194.ap-northeast-1.compute.amazonaws.com/auth/realms/kana-api
 
   keycloak:
     env_file:
@@ -17,5 +17,4 @@ services:
       KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
       KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
       KC_HOSTNAME: ${KC_HOSTNAME}
-      DASHBOARD_ROOT_URL: https://aws.com
 
