--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -6,7 +6,7 @@ http {
         listen 80;
         server_name localhost;
         location /auth {
-            proxy_pass http://keycloak:8080/auth;
+            proxy_pass http://keycloak/auth;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,7 +15,7 @@ http {
             proxy_redirect off;
         }
         location / {
-            proxy_pass http://dashboard:8000/;
+            proxy_pass http://dashboard/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
