--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.devtools.remote.restart.enabled=true
 spring.devtools.livereload.enabled=true
 server.port=8080
 
-spring.security.oauth2.client.provider.external.issuer-uri=http://localhost/_/auth/realms/kana-api
+spring.security.oauth2.client.provider.external.issuer-uri=${KEY_CLOAK_AUTH_URL}/realms/${REALM_NAME}
 
 spring.security.oauth2.client.registration.example.provider=external
 spring.security.oauth2.client.registration.example.client-name=dashboard-client
