--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.security.oauth2.client.registration.example.client-id=dashboard-client
 spring.security.oauth2.client.registration.example.client-secret=cb5BVbUGvYixfzHD1xifC7h7KQ7cSn0c
 spring.security.oauth2.client.registration.example.scope=openid,profile
 spring.security.oauth2.client.registration.example.client-authentication-methode=client_secret_post
+spring.mvc.view.suffix = .html
