--- a/compose-dashboard.yaml
+++ b/compose-dashboard.yaml
@@ -12,6 +12,6 @@ services:
        context: ./demo/   
      environment:
        REALM_NAME: kana-api
-       KEY_CLOAK_AUTH_URL: http://ec2-35-76-34-50.ap-northeast-1.compute.amazonaws.com/auth
+       KEY_CLOAK_AUTH_URL: http://${KC_HOSTNAME}/auth
      ports:
        - 80:8080
