--- a/compose-dashboard.yaml
+++ b/compose-dashboard.yaml
@@ -7,11 +7,13 @@ networks:
     driver: bridge
     
 services:
-   dashboard:
-     build:
-       context: ./demo/   
-     environment:
-       REALM_NAME: kana-api
-       KEY_CLOAK_AUTH_URL: http://${KC_HOSTNAME}/auth
-     ports:
-       - 80:8080
+  dashboard:
+    build:
+      context: ./demo/   
+    environment:
+      REALM_NAME: kana-api
+      KEY_CLOAK_AUTH_URL: http://${KC_HOSTNAME}/auth
+    ports:
+      - 80:8080
+    volumes:
+      - app/:/app/
