--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -13,14 +13,14 @@ RUN cd /opt/maven && \
 ENV PATH="${PATH}:/opt/maven/apache-maven-3.9.6/bin"
 
 WORKDIR  /opt/gradle
-RUN wget https://services.gradle.org/distributions/gradle-8.6-bin.zip
-RUN unzip gradle-8.6-bin.zip
-RUN mv gradle-8.6 /usr/local/gradle
+RUN wget https://services.gradle.org/distributions/gradle-8.5-bin.zip
+RUN unzip gradle-8.5-bin.zip
+RUN mv gradle-8.5 /usr/local/gradle
 ENV PATH=${PATH}:/usr/local/gradle/bin
 
 # RUN mkdir /app
 WORKDIR /app
-COPY . .
+COPY app/ /app
 # RUN mvn package
 
 CMD ["sh", "gradlew", "bootRun"]
