--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-parent:3.2.3'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.apache.logging.log4j:log4j-api'
 	implementation 'org.apache.logging.log4j:log4j-core'
 	implementation 'org.apache.logging.log4j:log4j-slf4j-impl'
