--- a/.env-template
+++ b/.env-template
@@ -1,9 +1,12 @@
 KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=
+KEYCLOAK_ADMIN_PASSWORD=digital
 
+MYSQL_HOST=localhost
 MYSQL_DATABASE=keycloak
 MYSQL_USER=keycloak
-MYSQL_ROOT_PASSWORD=
+MYSQL_ROOT_PASSWORD=digital
 
 # Sets this password to the keycloak.conf also.
-MYSQL_PASSWORD=
+MYSQL_PASSWORD=digital
+
+KC_HOSTNAME=localhost
