--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,9 @@
-include:
-  - path: 
-    - compose-common.yaml
-    - compose-dev.yaml
+services:
+  dashboard:
+    build:
+      context: ./demo/   
+    environment:
+      REALM_NAME: kana-api
+      KEY_CLOAK_AUTH_URL: http://${KC_HOSTNAME}/auth
+    ports:
+      - 80:8080
